force-app/main/default/objects/Staff_User__c/Staff_User__c.object-meta.xml
<CustomObject>
    <label>Staff User</label>
    <pluralLabel>Staff Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Staff User Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>