force-app/main/default/objects/Staff_User__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>User alias</description>
    <label>Alias</label>
    <length>80</length>
    <type>Text</type>
</CustomField>