force-app/main/default/objects/Staff_User__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <description>User License name</description>
    <label>License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>