force-app/main/default/objects/Staff_User__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <description>User Profile name</description>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>