force-app/main/default/objects/Staff_User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>User Role name</description>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>