force-app/main/default/objects/Staff_User__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Related Salesforce User</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Staff User</relationshipLabel>
    <relationshipName>Staff_User</relationshipName>
    <type>Lookup</type>
</CustomField>